syntax = "proto3";

package position;

option go_package = "github.com/fynnwu/FinancialTrading/go-api/position;position";

// 持仓管理服务。
service PositionService {
  // 列表查询持仓。
  rpc GetPositions(GetPositionsRequest) returns (PositionsResponse);

  // 查询单笔持仓。
  rpc GetPosition(GetPositionRequest) returns (PositionResponse);

  // 汇总持仓统计。
  rpc GetPositionSummary(GetPositionSummaryRequest) returns (PositionSummaryResponse);

  // 执行平仓。
  rpc ClosePosition(ClosePositionRequest) returns (PositionResponse);
}

// 列表请求。
message GetPositionsRequest {
  // 用户 ID。
  string user_id = 1;
  // 交易对筛选。
  string symbol = 2;
  // 页码。
  int32 page = 3;
  // 每页大小。
  int32 page_size = 4;
}

// 持仓明细。
message PositionResponse {
  // 持仓 ID。
  string position_id = 1;
  // 用户 ID。
  string user_id = 2;
  // 交易对。
  string symbol = 3;
  // 方向。
  string side = 4;
  // 数量。
  string quantity = 5;
  // 开仓价。
  string entry_price = 6;
  // 当前价。
  string current_price = 7;
  // 未实现盈亏。
  string unrealized_pnl = 8;
  // 已实现盈亏。
  string realized_pnl = 9;
  // 开仓时间。
  int64 opened_at = 10;
  // 平仓时间。
  int64 closed_at = 11;
}

// 列表响应。
message PositionsResponse {
  // 记录列表。
  repeated PositionResponse positions = 1;
  // 总记录数。
  int64 total = 2;
}

// 单查请求。
message GetPositionRequest {
  // 持仓 ID。
  string position_id = 1;
  // 用户 ID。
  string user_id = 2;
}

// 汇总请求。
message GetPositionSummaryRequest {
  // 用户 ID。
  string user_id = 1;
}

// 汇总响应。
message PositionSummaryResponse {
  // 总持仓笔数。
  int64 total_positions = 1;
  // 总未实现盈亏。
  string total_unrealized_pnl = 2;
  // 总已实现盈亏。
  string total_realized_pnl = 3;
  // 持仓快照列表。
  repeated PositionResponse positions = 4;
}

// 平仓请求。
message ClosePositionRequest {
  // 持仓 ID。
  string position_id = 1;
  // 用户 ID。
  string user_id = 2;
  // 平仓价格。
  string close_price = 3;
}
